k8s/memos/05_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      containers:
        - name: memos
          image: neosmemo/memos:stable
          ports:
            - containerPort: 5230
          volumeMounts:
            - name: memos-storage
              mountPath: /var/opt/memos
      volumes:
        - name: memos-storage
          persistentVolumeClaim:
            claimName: memos-pvc
