k8s/memos/04_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: memos-service
  namespace: memos
spec:
  selector:
    app: memos
  ports:
    - protocol: TCP
      port: 5230
      targetPort: 5230
  type: ClusterIP
